--- a/app/javascript/packs/app/assets/stylesheets/application.scss
+++ b/app/javascript/packs/app/assets/stylesheets/application.scss
@@ -270,5 +270,23 @@ h3 {
             vertical-align: top;
         }
     }
+
+    .main-image {
+        margin: 20px;
+        max-width: 100%;
+    }
+    h1 {
+        display: inline-block;
+        margin-right: 20px;
+    }
+
+    .tags {
+        display: inline-block;
+        vertical-align: super;
+    }
+
+    img {
+        margin: 0 auto;
+    }
 }
 
