--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,14 @@
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'assets/stylesheets/application' %>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39228168-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-39228168-7');
+    </script>
   </head>
 
   <body>
