adds order to nodes#index; fixes bug in portfolio entry item width not shrinking

--- a/app/javascript/packs/app/assets/stylesheets/application.scss
+++ b/app/javascript/packs/app/assets/stylesheets/application.scss
@@ -255,6 +255,10 @@ h3 {
         img {
             max-width: 100%;
         }
+
+        p {
+            word-break: break-all;
+        }
     }
 
     
