--- a/app/javascript/packs/app/assets/stylesheets/application.scss
+++ b/app/javascript/packs/app/assets/stylesheets/application.scss
@@ -4,11 +4,17 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
+$primary-color: #3d4f5d;
 $purple: #8A4D76;
 $pink: #FA7C91;
 $brown: #757763;
 $beige-light: #D0D1CD;
 $beige-lighter: #EFF0EB;
+$white: #fff;
+$black: #444;
+$dark-grey: #ddd;
+$light-grey: #aaa;
+$link-color: #3d92c9;
 
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
@@ -221,47 +227,96 @@ h3 {
     }
 }
 
-.Portfolio {
-    .PortfolioList {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        text-decoration: none;
-    }
-    .PortfolioList__item {
+.PortfolioList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    &__item {
+        position: relative;
         flex: 0 1 480px;
-        margin: 15px 0px 15px 0px;
+        margin: 1em 0;
         cursor: pointer;
-        border: 1px solid #aaa;
+        border: 1px solid $light-grey;
         border-radius: 5px;
-        padding: 15px;
+        padding: 1em;
         text-align: center;
+        opacity: 0.8;
+        transition: opacity 0.5s ease, box-shadow 0.5s ease;
 
         &:hover {
-            box-shadow: 1px 1px 1px 1px #ddd, -1px -1px 1px 1px #ddd;
+            box-shadow: 1px 1px 1px 1px lighten($dark-grey, 30%), -1px -1px 1px 1px lighten($dark-grey, 30%);
             text-decoration: none;
+            opacity: 1;
         }
 
-        .post-header {
-            text-align: center;
-            margin-bottom: 30px;
+        .post {
+            &-header {
+                text-align: center;
+                margin-bottom: 30px;
+            }
+            &-description { margin-top: 20px; }
         }
 
-        .post-description {
-            margin-top: 20px;
-        }
-    
-        img {
-            max-width: 100%;
+        img { max-width: 100%; }
+        p { word-break: break-all; }
+
+        .overlay {
+            display: none;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba($light-grey, 0);
+            transition: background-color 1s ease;
+
+            a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 50px;
+                width: 250px;
+                border-radius: 5px;
+                font-size: 1.25em;
+                color: lighten($link-color, 10%);
+                background-color: lighten($primary-color, 5%);
+                padding: 2em;
+                opacity: 1;
+                text-decoration: none;
+                transition: opacity 0.5s ease, background-color 0.5s ease, color 0.5s ease;
+                &:hover {
+                    background-color: $primary-color;
+                    color: lighten($link-color, 15%);
+                }
+            }
         }
 
-        p {
-            word-break: break-all;
+        &:hover .overlay {
+            display: flex;
+            background-color: rgba($light-grey, 0.6);
         }
     }
+}
 
-    
+@media screen and (max-width: 768px) {
+    .PortfolioList__item {
+        opacity: 1;
+        .post-description {
+            margin-bottom: 75px;
+        }
+        .overlay {
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-end;
+            a { width: 100%; }
+        }
+        &:hover .overlay {
+            background-color: rgba($light-grey, 0);
+        }
+    }
 }
 
 .tags {
